2012-03-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/pipeline.hxx, include/pqxx/result.hxx, include/pqxx/tuple.hxx,
 include/pqxx/util.hxx, src/pipeline.cxx, src/result.cxx, src/tuple.cxx:
 - Dynamic throw specs are deprecated.  Ditch the non-empty ones first.
2012-03-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/prepared_statement.hxx:
 - Updated docs for prepared-statement parameters: no longer need declarations.
 - Thanks Maxime van Noppen.
2012-03-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
 - Fixed compile error and warnings in example code.
 - Thanks Martin van den Nieuwelaar and Chris Angelico.
2012-02-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/extract_version:
 - Compatibility fix for OS X.  Thanks Torsten Hilgenberg.
2012-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/test_prepared_statement.cxx:
 - Test was brittle w.r.t. result ordering.  Rewrote it.
 - Thanks Jean Marie de Montarby (did I spell that right?) for the report.
2012-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/binarystring.hxx, include/pqxx/notify-listen.hxx,
 test/test004.cxx, test/test023.cxx, test/test078.cxx, test/test079.cxx,
 test/test087.cxx:
 - Deprecate notify_listener.
 - Deprecate binarystring (connection-unaware) escaping functions.
2011-12-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/tuple.hxx:
 - Forward-declare pqxx::range_error.
 - pqxx::range_error, not just range_error (problem with g++ -std=c++0x).
 src/Makefile.am:
 - Cosmetic.
 test/unit/test_result_slicing.cxx:
 - Disambiguate tuple as pqxx::tuple, not std::tuple, for C++0x.
 tools/Makefile.am:
 - Prevent include/pqxx from going into the include path.
 - Include path was breaking #include <tuple> in C++0x standard headers!
2011-11-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/preprelease:
 - Removed.
2011-11-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/sign-tarball:
 - New tool.
 - Creates GPG signature & hash sums for tarball.